hphp/hack/test/typecheck/references/pass_by_ref/byref_dynamic_calls.php.exp
File "byref_dynamic_calls.php", line 35, characters 14-16:
Arguments can not be passed by reference to dynamic function calls (NastCheck[3078])
File "byref_dynamic_calls.php", line 43, characters 15-17:
Arguments can not be passed by reference to dynamic function calls (NastCheck[3078])
File "byref_dynamic_calls.php", line 55, characters 11-13:
Arguments can not be passed by reference to dynamic function calls (NastCheck[3078])
File "byref_dynamic_calls.php", line 61, characters 13-15:
Arguments can not be passed by reference to dynamic function calls (NastCheck[3078])
File "byref_dynamic_calls.php", line 61, characters 8-11:
No class variable '$str' in Foo (Typing[4090])
File "byref_dynamic_calls.php", line 8, characters 7-9:
Declaration of Foo is here
